--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
